upgrade spring version and return pom extending for user-service